util/ElgolParser.js
// Generated from util/ElgolParser.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import ElgolParserListener from './ElgolParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class ElgolParser extends antlr4.Parser {

    static grammarFileName = "ElgolParser.g4";
    static literalNames = [ null, null, null, "'elgio'", "'inteiro'", "'zero'", 
                            "'comp'", "'enquanto'", "'se'", "'entao'", "'senao'", 
                            "'inicio'", "'fim'", "'maior'", "'menor'", "'igual'", 
                            "'diferente'", null, null, null, null, "'='", 
                            "'+'", "'-'", "'x'", "'/'", "'('", "')'", "'.'", 
                            "','" ];
    static symbolicNames = [ null, "ID", "ERRO_LEXICO", "ELGIO", "INTEIRO", 
                             "ZERO", "COMP", "ENQUANTO", "SE", "ENTAO", 
                             "SENAO", "INICIO", "FIM", "MAIOR", "MENOR", 
                             "IGUAL", "DIFERENTE", "IDENTIFICADOR_POTENCIAL", 
                             "FUNCAO_POTENCIAL", "FUNCAO", "NUM", "ASSIGN", 
                             "MAIS", "MENOS", "MULT", "DIV", "LPAREN", "RPAREN", 
                             "PONTO", "VIRGULA", "COMENTARIO", "WS" ];
    static ruleNames = [ "program", "functionDecl", "paramList", "param", 
                         "mainBlock", "statementList", "statement", "varDecl", 
                         "assignment", "elgioAssignment", "mathExpr", "mathOp", 
                         "mathOperand", "funcCall", "argList", "arg", "elgioExpr", 
                         "elgioOperand", "logicalExpr", "logicalOperand", 
                         "relOp", "whileStmt", "ifStmt" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = ElgolParser.ruleNames;
        this.literalNames = ElgolParser.literalNames;
        this.symbolicNames = ElgolParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, ElgolParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 49;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 46;
	            this.functionDecl();
	            this.state = 51;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 52;
	        this.mainBlock();
	        this.state = 53;
	        this.match(ElgolParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionDecl() {
	    let localctx = new FunctionDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, ElgolParser.RULE_functionDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 55;
	        this.match(ElgolParser.INTEIRO);
	        this.state = 56;
	        this.match(ElgolParser.FUNCAO);
	        this.state = 57;
	        this.match(ElgolParser.LPAREN);
	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===4) {
	            this.state = 58;
	            this.paramList();
	        }

	        this.state = 61;
	        this.match(ElgolParser.RPAREN);
	        this.state = 62;
	        this.match(ElgolParser.PONTO);
	        this.state = 63;
	        this.match(ElgolParser.INICIO);
	        this.state = 64;
	        this.match(ElgolParser.PONTO);
	        this.state = 65;
	        this.statementList();
	        this.state = 66;
	        this.match(ElgolParser.FIM);
	        this.state = 67;
	        this.match(ElgolParser.PONTO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	paramList() {
	    let localctx = new ParamListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, ElgolParser.RULE_paramList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this.param();
	        this.state = 74;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===29) {
	            this.state = 70;
	            this.match(ElgolParser.VIRGULA);
	            this.state = 71;
	            this.param();
	            this.state = 76;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	param() {
	    let localctx = new ParamContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, ElgolParser.RULE_param);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        this.match(ElgolParser.INTEIRO);
	        this.state = 78;
	        this.match(ElgolParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mainBlock() {
	    let localctx = new MainBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, ElgolParser.RULE_mainBlock);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 80;
	        this.match(ElgolParser.INICIO);
	        this.state = 81;
	        this.match(ElgolParser.PONTO);
	        this.state = 82;
	        this.statementList();
	        this.state = 83;
	        this.match(ElgolParser.FIM);
	        this.state = 84;
	        this.match(ElgolParser.PONTO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statementList() {
	    let localctx = new StatementListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, ElgolParser.RULE_statementList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 89;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 410) !== 0)) {
	            this.state = 86;
	            this.statement();
	            this.state = 91;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, ElgolParser.RULE_statement);
	    try {
	        this.state = 99;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 92;
	            this.varDecl();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 93;
	            this.assignment();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 94;
	            this.elgioAssignment();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 95;
	            this.whileStmt();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 96;
	            this.ifStmt();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 97;
	            this.match(ElgolParser.ID);
	            this.state = 98;
	            this.match(ElgolParser.PONTO);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varDecl() {
	    let localctx = new VarDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, ElgolParser.RULE_varDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 101;
	        this.match(ElgolParser.INTEIRO);
	        this.state = 102;
	        this.match(ElgolParser.ID);
	        this.state = 103;
	        this.match(ElgolParser.PONTO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignment() {
	    let localctx = new AssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, ElgolParser.RULE_assignment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.match(ElgolParser.ID);
	        this.state = 106;
	        this.match(ElgolParser.ASSIGN);
	        this.state = 107;
	        this.mathExpr();
	        this.state = 108;
	        this.match(ElgolParser.PONTO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elgioAssignment() {
	    let localctx = new ElgioAssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, ElgolParser.RULE_elgioAssignment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 110;
	        this.match(ElgolParser.ELGIO);
	        this.state = 111;
	        this.match(ElgolParser.ASSIGN);
	        this.state = 112;
	        this.elgioExpr();
	        this.state = 113;
	        this.match(ElgolParser.PONTO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mathExpr() {
	    let localctx = new MathExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, ElgolParser.RULE_mathExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 115;
	        this.mathOperand();
	        this.state = 121;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 62914560) !== 0)) {
	            this.state = 116;
	            this.mathOp();
	            this.state = 117;
	            this.mathOperand();
	            this.state = 123;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mathOp() {
	    let localctx = new MathOpContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, ElgolParser.RULE_mathOp);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 124;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 62914560) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mathOperand() {
	    let localctx = new MathOperandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, ElgolParser.RULE_mathOperand);
	    try {
	        this.state = 130;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 20:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 126;
	            this.match(ElgolParser.NUM);
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 127;
	            this.match(ElgolParser.ZERO);
	            break;
	        case 1:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 128;
	            this.match(ElgolParser.ID);
	            break;
	        case 19:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 129;
	            this.funcCall();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcCall() {
	    let localctx = new FuncCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, ElgolParser.RULE_funcCall);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 132;
	        this.match(ElgolParser.FUNCAO);
	        this.state = 133;
	        this.match(ElgolParser.LPAREN);
	        this.state = 135;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 1048610) !== 0)) {
	            this.state = 134;
	            this.argList();
	        }

	        this.state = 137;
	        this.match(ElgolParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argList() {
	    let localctx = new ArgListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, ElgolParser.RULE_argList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 139;
	        this.arg();
	        this.state = 144;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===29) {
	            this.state = 140;
	            this.match(ElgolParser.VIRGULA);
	            this.state = 141;
	            this.arg();
	            this.state = 146;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	arg() {
	    let localctx = new ArgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, ElgolParser.RULE_arg);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 147;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1048610) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elgioExpr() {
	    let localctx = new ElgioExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, ElgolParser.RULE_elgioExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.elgioOperand();
	        this.state = 155;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 62914560) !== 0)) {
	            this.state = 150;
	            this.mathOp();
	            this.state = 151;
	            this.elgioOperand();
	            this.state = 157;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elgioOperand() {
	    let localctx = new ElgioOperandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, ElgolParser.RULE_elgioOperand);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1048610) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	logicalExpr() {
	    let localctx = new LogicalExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, ElgolParser.RULE_logicalExpr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        this.logicalOperand();
	        this.state = 161;
	        this.relOp();
	        this.state = 162;
	        this.logicalOperand();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	logicalOperand() {
	    let localctx = new LogicalOperandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, ElgolParser.RULE_logicalOperand);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 164;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1048610) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relOp() {
	    let localctx = new RelOpContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, ElgolParser.RULE_relOp);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 166;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 122880) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	whileStmt() {
	    let localctx = new WhileStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, ElgolParser.RULE_whileStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.match(ElgolParser.ENQUANTO);
	        this.state = 169;
	        this.logicalExpr();
	        this.state = 170;
	        this.match(ElgolParser.PONTO);
	        this.state = 171;
	        this.match(ElgolParser.INICIO);
	        this.state = 172;
	        this.match(ElgolParser.PONTO);
	        this.state = 173;
	        this.statementList();
	        this.state = 174;
	        this.match(ElgolParser.FIM);
	        this.state = 175;
	        this.match(ElgolParser.PONTO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStmt() {
	    let localctx = new IfStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, ElgolParser.RULE_ifStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 177;
	        this.match(ElgolParser.SE);
	        this.state = 178;
	        this.logicalExpr();
	        this.state = 179;
	        this.match(ElgolParser.PONTO);
	        this.state = 180;
	        this.match(ElgolParser.ENTAO);
	        this.state = 181;
	        this.match(ElgolParser.PONTO);
	        this.state = 182;
	        this.match(ElgolParser.INICIO);
	        this.state = 183;
	        this.match(ElgolParser.PONTO);
	        this.state = 184;
	        this.statementList();
	        this.state = 185;
	        this.match(ElgolParser.FIM);
	        this.state = 186;
	        this.match(ElgolParser.PONTO);
	        this.state = 187;
	        this.match(ElgolParser.SENAO);
	        this.state = 188;
	        this.match(ElgolParser.PONTO);
	        this.state = 189;
	        this.match(ElgolParser.INICIO);
	        this.state = 190;
	        this.match(ElgolParser.PONTO);
	        this.state = 191;
	        this.statementList();
	        this.state = 192;
	        this.match(ElgolParser.FIM);
	        this.state = 193;
	        this.match(ElgolParser.PONTO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

ElgolParser.EOF = antlr4.Token.EOF;
ElgolParser.ID = 1;
ElgolParser.ERRO_LEXICO = 2;
ElgolParser.ELGIO = 3;
ElgolParser.INTEIRO = 4;
ElgolParser.ZERO = 5;
ElgolParser.COMP = 6;
ElgolParser.ENQUANTO = 7;
ElgolParser.SE = 8;
ElgolParser.ENTAO = 9;
ElgolParser.SENAO = 10;
ElgolParser.INICIO = 11;
ElgolParser.FIM = 12;
ElgolParser.MAIOR = 13;
ElgolParser.MENOR = 14;
ElgolParser.IGUAL = 15;
ElgolParser.DIFERENTE = 16;
ElgolParser.IDENTIFICADOR_POTENCIAL = 17;
ElgolParser.FUNCAO_POTENCIAL = 18;
ElgolParser.FUNCAO = 19;
ElgolParser.NUM = 20;
ElgolParser.ASSIGN = 21;
ElgolParser.MAIS = 22;
ElgolParser.MENOS = 23;
ElgolParser.MULT = 24;
ElgolParser.DIV = 25;
ElgolParser.LPAREN = 26;
ElgolParser.RPAREN = 27;
ElgolParser.PONTO = 28;
ElgolParser.VIRGULA = 29;
ElgolParser.COMENTARIO = 30;
ElgolParser.WS = 31;

ElgolParser.RULE_program = 0;
ElgolParser.RULE_functionDecl = 1;
ElgolParser.RULE_paramList = 2;
ElgolParser.RULE_param = 3;
ElgolParser.RULE_mainBlock = 4;
ElgolParser.RULE_statementList = 5;
ElgolParser.RULE_statement = 6;
ElgolParser.RULE_varDecl = 7;
ElgolParser.RULE_assignment = 8;
ElgolParser.RULE_elgioAssignment = 9;
ElgolParser.RULE_mathExpr = 10;
ElgolParser.RULE_mathOp = 11;
ElgolParser.RULE_mathOperand = 12;
ElgolParser.RULE_funcCall = 13;
ElgolParser.RULE_argList = 14;
ElgolParser.RULE_arg = 15;
ElgolParser.RULE_elgioExpr = 16;
ElgolParser.RULE_elgioOperand = 17;
ElgolParser.RULE_logicalExpr = 18;
ElgolParser.RULE_logicalOperand = 19;
ElgolParser.RULE_relOp = 20;
ElgolParser.RULE_whileStmt = 21;
ElgolParser.RULE_ifStmt = 22;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ElgolParser.RULE_program;
    }

	mainBlock() {
	    return this.getTypedRuleContext(MainBlockContext,0);
	};

	EOF() {
	    return this.getToken(ElgolParser.EOF, 0);
	};

	functionDecl = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FunctionDeclContext);
	    } else {
	        return this.getTypedRuleContext(FunctionDeclContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof ElgolParserListener ) {
	        listener.enterProgram(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ElgolParserListener ) {
	        listener.exitProgram(this);
		}
	}


}



class FunctionDeclContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ElgolParser.RULE_functionDecl;
    }

	INTEIRO() {
	    return this.getToken(ElgolParser.INTEIRO, 0);
	};

	FUNCAO() {
	    return this.getToken(ElgolParser.FUNCAO, 0);
	};

	LPAREN() {
	    return this.getToken(ElgolParser.LPAREN, 0);
	};

	RPAREN() {
	    return this.getToken(ElgolParser.RPAREN, 0);
	};

	PONTO = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(ElgolParser.PONTO);
	    } else {
	        return this.getToken(ElgolParser.PONTO, i);
	    }
	};


	INICIO() {
	    return this.getToken(ElgolParser.INICIO, 0);
	};

	statementList() {
	    return this.getTypedRuleContext(StatementListContext,0);
	};

	FIM() {
	    return this.getToken(ElgolParser.FIM, 0);
	};

	paramList() {
	    return this.getTypedRuleContext(ParamListContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof ElgolParserListener ) {
	        listener.enterFunctionDecl(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ElgolParserListener ) {
	        listener.exitFunctionDecl(this);
		}
	}


}



class ParamListContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ElgolParser.RULE_paramList;
    }

	param = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ParamContext);
	    } else {
	        return this.getTypedRuleContext(ParamContext,i);
	    }
	};

	VIRGULA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(ElgolParser.VIRGULA);
	    } else {
	        return this.getToken(ElgolParser.VIRGULA, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof ElgolParserListener ) {
	        listener.enterParamList(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof ElgolParserListener ) {
	        listener.exitParamList(this);
		}
	}


}



class ParamContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = ElgolParser.RULE_param;
    }

	INTEIRO() {
	    return this.getToken(ElgolParser.INTEIRO, 0);
	};

	ID() {
	    return this.getToken(ElgolParser.ID, 0);
	};

	enterRule(listener) {
	    if(listener instanceof ElgolParserListener ) {
	        listener.enterParam(this);
		}
	}
